--- a/ng/conf.d/server.error.pages.conf
+++ b/ng/conf.d/server.error.pages.conf
@@ -5,13 +5,13 @@ error_page  400 401 402 403 404 405
             412 413 414 415 416 417
             421 422 423 424 425 426
             428 429 431 451
-            @err40x;
+            /40x;
 
 error_page  500 501 502 503 504 505
             506 507 508 510 511
-            @err50x;
+            /50x;
 
-location @err40x {
+location = /40x {
     allow all;
     ssi on;
     internal;
@@ -20,7 +20,7 @@ location @err40x {
     try_files /$status.html /40x.html =444;
 }
 
-location @err50x {
+location = /50x {
     allow all;
     ssi on;
     internal;
