numbered nginx servers

--- a/ng/templates/http.conf
+++ b/ng/templates/http.conf
@@ -40,9 +40,9 @@ http {
     {{- end -}}
 
     {{ if has . "server" }}
-        {{- range .server -}}
-            {{- $outPath := printf "/etc/nginx/http.d/%s.conf" .name -}}
-            {{- tmpl.Exec "/etc/ng/templates/server.conf" . | file.Write $outPath -}}
+        {{- range $i, $server := .server -}}
+            {{- $outPath := printf "/etc/nginx/http.d/%d_%s.conf" $i $server.name -}}
+            {{- tmpl.Exec "/etc/ng/templates/server.conf" $server | file.Write $outPath -}}
         {{- end -}}
     {{ else }}
     server {
