nginx server multiple listen statements

--- a/ng/templates/server.conf
+++ b/ng/templates/server.conf
@@ -2,10 +2,13 @@ server {
     # include /etc/ng/conf.d/server.geo.check.conf;
     include /etc/ng/conf.d/server.error.pages.conf;
 
+    {{ if test.IsKind "string" .listen }}
     listen {{ .listen }};
-    {{- if has . "listen6" }}
-    listen {{ .listen6 }};
-    {{- end }}
+    {{ else }}
+    {{ range .listen }}
+    listen {{ . }};
+    {{ end }}
+    {{ end }}
 
     {{- if has . "server_name" }}
     server_name {{ .server_name }};
