nginx server underscores in headers on

--- a/ng/templates/server.conf
+++ b/ng/templates/server.conf
@@ -2,6 +2,8 @@ server {
     # include /etc/ng/conf.d/server.geo.check.conf;
     include /etc/ng/conf.d/server.error.pages.conf;
 
+    underscores_in_headers on;
+
     {{ if test.IsKind "string" .listen }}
     listen {{ .listen }};
     {{ else }}
