nginx proxy set header

--- a/ng/templates/location.conf
+++ b/ng/templates/location.conf
@@ -6,6 +6,15 @@ location {{ .path }} {
     {{- if has . "proxy_pass" }}
     include /etc/ng/conf.d/location.proxy.conf;
     proxy_pass {{ .proxy_pass }};
+    {{- if has . "proxy_set_header" }}
+    {{- if test.IsKind "slice" .proxy_set_header }}
+    {{ range .proxy_set_header }}
+    proxy_set_header {{ . -}};
+    {{- end }}
+    {{ else }}
+    proxy_set_header {{ .proxy_set_header -}};
+    {{- end }}
+    {{- end }}
     {{- end }}
 
     {{- if has . "root" }}
