--- a/ng/templates/http.conf
+++ b/ng/templates/http.conf
@@ -39,6 +39,10 @@ http {
     {{ template "/etc/ng/templates/access.conf" .access }}
     {{- end -}}
 
+    {{- if has . "upstream" }}
+    {{ template "/etc/ng/templates/http.upstream.conf" .upstream }}
+    {{- end -}}
+
     {{ if has . "server" }}
         {{- range $i, $server := .server -}}
             {{- $outPath := printf "/etc/nginx/http.d/%d_%s.conf" $i $server.name -}}
