--- a/ng/conf.d/location.proxy.conf
+++ b/ng/conf.d/location.proxy.conf
@@ -10,8 +10,14 @@ proxy_set_header "Referer" $http_referer;
 # connection with a proxied server.
 # No more than 75 seconds.
 proxy_connect_timeout 5s;
+
 proxy_read_timeout 10s;
 proxy_send_timeout 10s;
 
 proxy_socket_keepalive on;
 proxy_http_version 1.1;
+
+keepalive_timeout 300;
+
+proxy_buffering on;
+proxy_set_header   "Connection" "";
