--- a/ng/templates/location.conf
+++ b/ng/templates/location.conf
@@ -3,6 +3,14 @@ location {{ .path }} {
     {{ template "/etc/ng/templates/access.conf" .access }}
     {{- end -}}
 
+    {{- if has . "rewrite" }}
+    rewrite {{ .rewrite }};
+    {{- end }}
+
+    {{- if has . "return" }}
+    return {{ .return }};
+    {{- end }}
+
     {{- if has . "proxy_pass" }}
     include /etc/ng/conf.d/location.proxy.conf;
     proxy_pass {{ .proxy_pass }};
@@ -25,10 +33,6 @@ location {{ .path }} {
     {{-  range .add_header }}
     add_header {{ . }};
     {{- end }}
-    {{- end }}
-
-    {{- if has . "return" }}
-    return {{ .return }};
     {{- end }}
 
     {{- if has . "try_files" }}
