--- a/ng/templates/server.conf
+++ b/ng/templates/server.conf
@@ -4,6 +4,17 @@ server {
 
     underscores_in_headers on;
 
+    {{ if has . "certbot" }}
+        {{ if test.IsKind "string" .certbot }}
+            {{ template /etc/ng/templates/certbot.conf .certbot }}
+            /etc/letsencrypt/live/{{.}}/privkey.pem
+        {{ else }}
+            {{ range .certbot }}
+            {{ template /etc/ng/templates/certbot.conf . }}
+            {{ end }}
+        {{ end }}
+    {{ end }}
+
     {{ if test.IsKind "string" .listen }}
     listen {{ .listen }};
     {{ else }}
