--- a/ng/templates/certbot.conf
+++ b/ng/templates/certbot.conf
@@ -1,4 +1,4 @@
-{{  if (file.Exists "/etc/letsencrypt/live/{{.}}/privkey.pem") }}
+{{  if (file.Exists (printf "/etc/letsencrypt/live/%s/privkey.pem" .)) }}
 listen 443 ssl; # managed by Certbot
 ssl_certificate /etc/letsencrypt/live/{{.}}/fullchain.pem; # managed by Certbot
 ssl_certificate_key /etc/letsencrypt/live/{{.}}/privkey.pem; # managed by Certbot
