--- a/ng/templates/server.conf
+++ b/ng/templates/server.conf
@@ -6,11 +6,11 @@ server {
 
     {{ if has . "certbot" }}
         {{ if test.IsKind "string" .certbot }}
-            {{ template /etc/ng/templates/certbot.conf .certbot }}
+            {{ template "/etc/ng/templates/certbot.conf" .certbot }}
             /etc/letsencrypt/live/{{.}}/privkey.pem
         {{ else }}
             {{ range .certbot }}
-            {{ template /etc/ng/templates/certbot.conf . }}
+            {{ template "/etc/ng/templates/certbot.conf" . }}
             {{ end }}
         {{ end }}
     {{ end }}
