--- a/ng/templates/server.conf
+++ b/ng/templates/server.conf
@@ -4,16 +4,9 @@ server {
 
     underscores_in_headers on;
 
-    {{ if has . "certbot" }}
-        {{ if test.IsKind "string" .certbot }}
-            {{ template "/etc/ng/templates/certbot.conf" .certbot }}
-            /etc/letsencrypt/live/{{.}}/privkey.pem
-        {{ else }}
-            {{ range .certbot }}
-            {{ template "/etc/ng/templates/certbot.conf" . }}
-            {{ end }}
-        {{ end }}
-    {{ end }}
+    {{- if has . "server_name" }}
+    server_name {{ .server_name }};
+    {{- end }}
 
     {{ if test.IsKind "string" .listen }}
     listen {{ .listen }};
@@ -23,9 +16,21 @@ server {
     {{ end }}
     {{ end }}
 
-    {{- if has . "server_name" }}
-    server_name {{ .server_name }};
-    {{- end }}
+    {{ if has . "certbot" }}
+        {{ if test.IsKind "string" .certbot }}
+            {{ template "/etc/ng/templates/certbot.conf" .certbot }}
+        {{ else }}
+            {{ if test.IsKind "slice" .certbot }}
+            {{ range .certbot }}
+            {{ template "/etc/ng/templates/certbot.conf" . }}
+            {{ end }}
+            {{ else }}
+            {{ if test.IsKind "bool" .certbot }}
+            {{ template "/etc/ng/templates/certbot.conf" .server_name }}
+            {{ end }}
+            {{ end }}
+        {{ end }}
+    {{ end }}
 
     {{- if has . "set_real_ip_from" }}
     set_real_ip_from {{ .set_real_ip_from }};
